# DoomLike

./: .gitmodules  CMakeLists.txt  main.cpp
include/: game.hpp  point.hpp  window.hpp
include/impl/: glfw_glew_window.hpp
src/: game.cpp
src/window/: glfw_glew_window.cpp  window.cpp
